# geist

./: .env.example  .gitignore  README.md  netlify.toml  skills-lock.json
apps/web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AssetGraphPanel.tsx  CoordinationRail.tsx  ExecutionCoordination.tsx  GeistLogo.tsx  MonadProof.tsx  PipelineRail.tsx  RiskScores.tsx  SelectedAsset.tsx  SemanticIRPanel.tsx  SignalInput.tsx  SocialSources.tsx  TermHint.tsx  TrendDiscovery.tsx
apps/web/src/lib/: api.ts  assets.ts  contract.ts  discovery.ts  ir.ts  mock.ts  monad.ts  socials.ts  terms.ts  types.ts  wagmi.ts
contracts/broadcast/Deploy.s.sol/10143/: run-1781021950623.json  run-1781022894088.json  run-1781026360791.json
contracts/script/: Deploy.s.sol
contracts/src/: ExecutionGraphRegistry.sol
docs/: ai-ide-tasks.md  pitch.md
scripts/: package.json  pytrends_fetch.py  requirements.txt  smoke-test.js
services/api/: Cargo.toml
services/api/src/: agent.rs  corpus.rs  discovery.rs  ir.rs  main.rs  massive.rs  news.rs  pipeline.rs  reddit.rs  trends.rs  x_corpus.rs
