[package]
name = "geist-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
sha2 = "0.10"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"
